# opentelemetry-collector-contrib

./: .checkapi.yaml  .codecov.yml  .codespellrc  .commitlintrc.json  .coveragerc  .dccache  .devcontainer.json  .dockerignore  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .golangci.yml  .isort.cfg  .markdownlint.yaml  .misspellignore  .mvd.json  .pylintrc  .readthedocs.yml  .schemagen.yaml  .tool-versions  .travis.yml  1  AGENTS.md  CHANGELOG-API.md  CHANGELOG-AWS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING-AWS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.build  Dockerfile.custom  Makefile  Makefile.Common  Makefile.Global  Makefile.Weaver  NOTICE  README.md  (+73 more)
_template/: README.rst  pyproject.toml  setup.cfg  setup.py  version.py
exporter/opentelemetry-exporter-datadog/: CHANGELOG.md  README.rst  pyproject.toml  setup.cfg  setup.py
exporter/opentelemetry-exporter-datadog/tests/: test_datadog_exporter.py  test_datadog_format.py
exporter/opentelemetry-exporter-prometheus-remote-write/: CHANGELOG.md  README.rst  pyproject.toml  setup.cfg  setup.py
exporter/opentelemetry-exporter-prometheus-remote-write/example/: Dockerfile  README.md  cortex-config.yml  docker-compose.yml  requirements.txt  sampleapp.py
exporter/opentelemetry-exporter-prometheus-remote-write/examples/: Dockerfile  README.md  cortex-config.yml  requirements.txt  sampleapp.py
exporter/opentelemetry-exporter-prometheus-remote-write/proto/: README.md  generate-proto-py.sh
exporter/opentelemetry-exporter-prometheus-remote-write/tests/: conftest.py  test_prometheus_remote_write_exporter.py
exporter/opentelemetry-exporter-richconsole/: README.rst  pyproject.toml  setup.cfg  setup.py
exporter/opentelemetry-exporter-richconsole/tests/: test_rich_exporter.py
instrumentation/opentelemetry-instrumentation-aio-pika/: README.rst  pyproject.toml  setup.cfg  setup.py
instrumentation/opentelemetry-instrumentation-aio-pika/tests/: consts.py  test_callback_decorator.py  test_publish_decorator.py  test_span_builder.py
instrumentation/opentelemetry-instrumentation-aiohttp-client/: CHANGELOG.md  README.rst  pyproject.toml  setup.cfg  setup.py
instrumentation/opentelemetry-instrumentation-aiohttp-client/tests/: test_aiohttp_client_integration.py
instrumentation/opentelemetry-instrumentation-aiopg/: CHANGELOG.md  README.rst  pyproject.toml  setup.cfg  setup.py
instrumentation/opentelemetry-instrumentation-aiopg/tests/: test_aiopg_integration.py
instrumentation/opentelemetry-instrumentation-asgi/: CHANGELOG.md  README.rst  pyproject.toml  setup.cfg  setup.py
instrumentation/opentelemetry-instrumentation-asgi/tests/: test_asgi_custom_headers.py  test_asgi_middleware.py  test_getter.py
instrumentation/opentelemetry-instrumentation-aws-lambda/: README.rst  pyproject.toml  setup.cfg  setup.py
instrumentation/opentelemetry-instrumentation-aws-lambda/tests/: test_aws_lambda_instrumentation_manual.py
instrumentation/opentelemetry-instrumentation-boto/: CHANGELOG.md  README.rst  pyproject.toml  setup.cfg  setup.py
instrumentation/opentelemetry-instrumentation-boto/tests/: conftest.py  test_boto_instrumentation.py
instrumentation/opentelemetry-instrumentation-boto3sqs/: README.rst  pyproject.toml  setup.cfg  setup.py
instrumentation/opentelemetry-instrumentation-boto3sqs/tests/: test_boto3sqs_instrumentation.py
instrumentation/opentelemetry-instrumentation-botocore/: CHANGELOG.md  README.rst  pyproject.toml  setup.cfg  setup.py
instrumentation/opentelemetry-instrumentation-botocore/tests/: test_botocore_dynamodb.py  test_botocore_instrumentation.py  test_botocore_lambda.py  test_botocore_sqs.py
instrumentation/opentelemetry-instrumentation-celery/: CHANGELOG.md  README.rst  pyproject.toml  setup.cfg  setup.py
instrumentation/opentelemetry-instrumentation-celery/tests/: celery_test_tasks.py  test_getter.py  test_tasks.py  test_utils.py
instrumentation/opentelemetry-instrumentation-confluent-kafka/: README.rst  pyproject.toml  setup.cfg  setup.py
instrumentation/opentelemetry-instrumentation-confluent-kafka/tests/: test_instrumentation.py
instrumentation/opentelemetry-instrumentation-dbapi/: CHANGELOG.md  README.rst  pyproject.toml  setup.cfg  setup.py
instrumentation/opentelemetry-instrumentation-dbapi/tests/: test_dbapi_integration.py
instrumentation/opentelemetry-instrumentation-django/: CHANGELOG.md  README.rst  pyproject.toml  setup.cfg  setup.py
instrumentation/opentelemetry-instrumentation-django/tests/: conftest.py  test_middleware.py  test_middleware_asgi.py  test_sqlcommenter.py  views.py
instrumentation/opentelemetry-instrumentation-falcon/: CHANGELOG.md  README.rst  pyproject.toml  setup.cfg  setup.py
instrumentation/opentelemetry-instrumentation-falcon/tests/: app.py  test_falcon.py
instrumentation/opentelemetry-instrumentation-fastapi/: CHANGELOG.md  README.rst  pyproject.toml  setup.cfg  setup.py
instrumentation/opentelemetry-instrumentation-fastapi/tests/: test_fastapi_instrumentation.py
instrumentation/opentelemetry-instrumentation-grpc/: CHANGELOG.md  README.rst  pyproject.toml  setup.cfg  setup.py
instrumentation/opentelemetry-instrumentation-grpc/tests/: _aio_client.py  _client.py  _server.py  test_aio_client_interceptor.py  (+8 more)
instrumentation/opentelemetry-instrumentation-httpx/: README.rst  pyproject.toml  setup.cfg  setup.py
instrumentation/opentelemetry-instrumentation-jinja2/: CHANGELOG.md  README.rst  pyproject.toml  setup.cfg  setup.py
instrumentation/opentelemetry-instrumentation-kafka-python/: MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
opentelemetry-contrib-instrumentations/: MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
opentelemetry-distro/: MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
opentelemetry-distro/tests/: test_distro.py
opentelemetry-instrumentation/: README.rst  pyproject.toml  setup.cfg  setup.py
opentelemetry-instrumentation/tests/: test_bootstrap.py  test_dependencies.py  test_distro.py  test_instrumentor.py  test_propagators.py  test_run.py  test_utils.py
(+34744 files in other folders)
