[metadata]
name = opentelemetry-contrib-instrumentations
description = OpenTelemetry Contrib Instrumentation Packages
long_description = file: README.rst
long_description_content_type = text/x-rst
author = OpenTelemetry Authors
author_email = cncf-opentelemetry-contributors@lists.cncf.io
url = https://github.com/open-telemetry/opentelemetry-python/tree/main/opentelemetry-contrib-instrumentations
platforms = any
license = Apache-2.0
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
python_requires = >=3.6
package_dir = 
	=src
packages = find_namespace:
zip_safe = False
include_package_data = True
install_requires = 
	opentelemetry-instrumentation-aiohttp-client==0.31b0
	opentelemetry-instrumentation-aiopg==0.31b0
	opentelemetry-instrumentation-asgi==0.31b0
	opentelemetry-instrumentation-asyncpg==0.31b0
	opentelemetry-instrumentation-aws-lambda==0.31b0
	opentelemetry-instrumentation-boto==0.31b0
	opentelemetry-instrumentation-boto3sqs==0.31b0
	opentelemetry-instrumentation-botocore==0.31b0
	opentelemetry-instrumentation-celery==0.31b0
	opentelemetry-instrumentation-confluent-kafka==0.31b0
	opentelemetry-instrumentation-dbapi==0.31b0
	opentelemetry-instrumentation-django==0.31b0
	opentelemetry-instrumentation-elasticsearch==0.31b0
	opentelemetry-instrumentation-falcon==0.31b0
	opentelemetry-instrumentation-fastapi==0.31b0
	opentelemetry-instrumentation-flask==0.31b0
	opentelemetry-instrumentation-grpc==0.31b0
	opentelemetry-instrumentation-httpx==0.31b0
	opentelemetry-instrumentation-jinja2==0.31b0
	opentelemetry-instrumentation-kafka-python==0.31b0
	opentelemetry-instrumentation-logging==0.31b0
	opentelemetry-instrumentation-mysql==0.31b0
	opentelemetry-instrumentation-pika==0.31b0
	opentelemetry-instrumentation-psycopg2==0.31b0
	opentelemetry-instrumentation-pymemcache==0.31b0
	opentelemetry-instrumentation-pymongo==0.31b0
	opentelemetry-instrumentation-pymysql==0.31b0
	opentelemetry-instrumentation-pyramid==0.31b0
	opentelemetry-instrumentation-redis==0.31b0
	opentelemetry-instrumentation-remoulade==0.31b0
	opentelemetry-instrumentation-requests==0.31b0
	opentelemetry-instrumentation-sklearn==0.31b0
	opentelemetry-instrumentation-sqlalchemy==0.31b0
	opentelemetry-instrumentation-sqlite3==0.31b0
	opentelemetry-instrumentation-starlette==0.31b0
	opentelemetry-instrumentation-system-metrics==0.31b0
	opentelemetry-instrumentation-tornado==0.31b0
	opentelemetry-instrumentation-urllib==0.31b0
	opentelemetry-instrumentation-urllib3==0.31b0
	opentelemetry-instrumentation-wsgi==0.31b0

[options.packages.find]
where = src

[options.extras_require]
test = 

