# Copyright The OpenTelemetry Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[metadata]
name = opentelemetry-distro
description = OpenTelemetry Python Distro
long_description = file: README.rst
long_description_content_type = text/x-rst
author = OpenTelemetry Authors
author_email = cncf-opentelemetry-contributors@lists.cncf.io
url = https://github.com/open-telemetry/opentelemetry-python/tree/main/opentelemetry-distro
platforms = any
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Typing :: Typed

[options]
python_requires = >=3.6
package_dir=
    =src
packages=find_namespace:
zip_safe = False
include_package_data = True
install_requires =
    opentelemetry-api ~= 1.3
    opentelemetry-instrumentation == 0.30b1
    opentelemetry-sdk == 1.11.1

[options.packages.find]
where = src

[options.entry_points]
opentelemetry_distro =
    distro = opentelemetry.distro:OpenTelemetryDistro
opentelemetry_configurator =
    configurator = opentelemetry.distro:OpenTelemetryConfigurator

[options.extras_require]
test =
otlp =
    opentelemetry-exporter-otlp == 1.11.1
