[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-instrumentation-asgi"
dynamic = ["version"]
description = "ASGI instrumentation for OpenTelemetry"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [
  { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "asgiref ~= 3.0",
  "opentelemetry-api ~= 1.12",
  "opentelemetry-instrumentation == 0.35b0.dev",
  "opentelemetry-semantic-conventions == 0.35b0.dev",
  "opentelemetry-util-http == 0.35b0.dev",
]

[project.optional-dependencies]
instruments = [
  "asgiref ~= 3.0",
]
test = [
  "opentelemetry-instrumentation-asgi[instruments]",
  "opentelemetry-test-utils == 0.35b0.dev",
]

[project.urls]
Homepage = "https://github.com/open-telemetry/opentelemetry-python-contrib/tree/main/instrumentation/opentelemetry-instrumentation-asgi"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/asgi/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
