[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-instrumentation-botocore"
dynamic = ["version"]
description = "OpenTelemetry Botocore instrumentation"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [
  { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "opentelemetry-api ~= 1.12",
  "opentelemetry-instrumentation == 0.36b0.dev",
  "opentelemetry-semantic-conventions == 0.36b0.dev",
]

[project.optional-dependencies]
instruments = [
  "botocore ~= 1.0",
]
test = [
  "opentelemetry-instrumentation-botocore[instruments]",
  "markupsafe==2.0.1",
  "moto[all] ~= 2.2.6",
  "opentelemetry-test-utils == 0.36b0.dev",
]

[project.entry-points.opentelemetry_instrumentor]
botocore = "opentelemetry.instrumentation.botocore:BotocoreInstrumentor"

[project.urls]
Homepage = "https://github.com/open-telemetry/opentelemetry-python-contrib/tree/main/instrumentation/opentelemetry-instrumentation-botocore"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/botocore/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
