[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-instrumentation-celery"
dynamic = ["version"]
description = "OpenTelemetry Celery Instrumentation"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [
  { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "opentelemetry-api ~= 1.12",
  "opentelemetry-instrumentation == 0.35b0",
  "opentelemetry-semantic-conventions == 0.35b0",
]

[project.optional-dependencies]
instruments = [
  "celery >= 4.0, < 6.0",
]
test = [
  "opentelemetry-instrumentation-celery[instruments]",
  "opentelemetry-test-utils == 0.35b0",
  "importlib-metadata==4.13.0",
  "pytest",
]

[project.entry-points.opentelemetry_instrumentor]
celery = "opentelemetry.instrumentation.celery:CeleryInstrumentor"

[project.urls]
Homepage = "https://github.com/open-telemetry/opentelemetry-python-contrib/tree/main/instrumentation/opentelemetry-instrumentation-celery"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/celery/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
